examples/scanner/literals/fail/invalid_hex.axo
const bad = "\xyz"
print(bad)
